# HomeAutomation

./: .gitignore  CMakeLists.txt  HomeClientSimulatorDependencies.pri  HomeServerDependencies.pri  QRF24LibraryDependencies.pri  README  README.txt  homeAutomation.pro
Atmel/atmelTemplate/src/: baseTemplate.pde
Atmel/atmelTestSketch/src/: baseTemplate.pde
LUA/: ds18b20.lua  ds18b20_test.lua  gpioModule.lua  init.lua  main.lua  tcpSend.lua  tcpService.lua
Software/ServerApp/: ServerApp.pro  house.cpp  house.h  main.cpp  serverLocalClient.cpp  serverLocalClient.h
Software/commonFiles/: houseData.cpp  houseData.h  tcpClient.cpp  tcpClient.h  tcpServer.cpp  tcpServer.h
Software/tests/: tests.pro  tst_testServer.cpp
XML/: deviceTypes.xml  rooms.xml
app/: CMakeLists.txt
app/clientSimulator/: CMakeLists.txt  clientSimulator.cpp  clientSimulator.h  clientSimulator_global.h
app/commonFiles/: utils.h
app/homeAdmin/: CMakeLists.txt  adminToolItem.h  adminWindow.cpp  adminWindow.h  adminWindow.ui  databaseAdmin.h
app/homeAdmin/Hardware/: moduleConfigurator.cpp  moduleWizard.h  moduleWizardPages.h
app/homeAdmin/Hardware/Atmel/: atmelSettingFileGenerator.h
app/homeAdmin/otherFiles/: AVRProgrammers  moduleTemplate.pde
app/homeAdmin/sql/: houseStructure  rooms  tables.sql
app/homeServer/: CMakeLists.txt  TCPLineParser.cpp  TCPLineParser.h  homeServer.cpp  homeServer.h  homeServer_global.h  moduleServer.cpp  moduleServer.h  tcpLineParser.cpp  tcpLineParser.h  tcpServer.cpp  tcpServer.h  userServer.cpp  userServer.h
app/houseData/: CMakeLists.txt  devices.h  houseDataHandler.h  houseDataStructure.cpp  houseDataStructure.h  houseData_global.h
app/houseDataStructure/: CMakeLists.txt  houseDataHandler.cpp  houseDataHandler.h  houseDataHandler_global.h  houseDataStructure.cpp  houseDataStructure.h
app/sharedElements/: CMakeLists.txt  debugCenter.cpp  debugCenter.h  sharedElements_global.h  utils.h
atmelModule/: atmelModule.brd  atmelModule.sch
hardwareSimulator/: atmelSimulator.h  atmelSimulator.ui  hardwareSimulator.pro  main.cpp
homeAdminTool/: adminResources.qrc  adminToolItem.h  adminWindow.cpp  adminWindow.h  adminWindow.ui  atmelConfigurator.cpp  atmelConfigurator.h  atmelConfigurator.ui  atmelModuleConfigurator.cpp  atmelModuleConfigurator.h  atmelModuleConfigurator.ui  atmelProgrammer.cpp  atmelProgrammer.h  atmelSettingFileGenerator.cpp  atmelSettingFileGenerator.h  databaseAdmin.cpp  databaseAdmin.h  homeAdminTool.pro  moduleWizard.cpp  moduleWizard.h  moduleWizardPages.cpp  moduleWizardPages.h
homeAdminTool/Hardware/: moduleConfigurator.h  moduleConfigurator.ui  moduleWizard.cpp
homeAdminTool/Hardware/Atmel/: atmelProgrammer.cpp
homeAdminTool/otherFiles/: moduleTemplate.pde
homeAdminTool/sql/: deviceTypes  moduleTemplate.pde
homeNetwork/: homeNetwork.cpp  homeNetwork.h  homeNetwork.pro
homeServer/: homeServer.pro  main.cpp
newSoftware/: homeAutomation.pro
newSoftware/QHFDevice/: QHFDevice.cpp  QHFDevice.h  QHFDevice.pro  QHFDeviceThread.cpp  QHFDeviceThread.h  qhfdevice_global.h
newSoftware/commonFiles/: databaseTools.cpp  databaseTools.h
newSoftware/hardwareSimulator/: atmelSimulator.cpp  gpioDevice.cpp  gpioDevice.h  gpioDevice.ui  hardwareSimulator.pro
newSoftware/homeAdminTool/: adminResources.qrc  adminToolItem.cpp  adminToolItem.h  adminWindow.cpp  adminWindow.h  adminWindow.ui  databaseAdmin.cpp  databaseAdmin.h  homeAdminTool.pro  main.cpp
newSoftware/homeAdminTool/sql/: deviceTypes  houseStructure  rooms  tables.sql
newSoftware/roomController/: roomController.pro
newSoftware/tests/: tests.pro
newSoftware/tests/QHFDevice/: QHFDevice.pro  tst_QHFDeviceTest.cpp
roomController/: main.cpp  roomController.pro
tests/: CMakeLists.txt  tests.pro  tst_dataStructure.cpp  tst_devices.cpp  tst_networkModuleSimulation.cpp  tst_networkModuleWithHardware.cpp
tests/atmelSensors/: atmelSensors.pro  tst_AtmelSensorsTest.cpp
tests/clientSimulator/: clientSimulator.cpp  clientSimulator.h  clientSimulator.pro
tests/espWifiModulesTest/: CMakeLists.txt  espWifiModulesTest.cpp  espWifiModulesTest.h  espWifiModulesTest.ui  main.cpp
tests/networkModule/: networkModule.pro
